# Decodium-4.0-Core-Shannon

./: .cirrus.yml  .gitignore  AetherWaterfall.cpp  AetherWaterfall.h  AetherWaterfallItem.cpp  AetherWaterfallItem.h  CHANGELOG.md  CMakeCPackOptions.cmake.in  CMakeLists.txt  CODE_SIGNING_POLICY.md  Configuration.cpp  Configuration.hpp  Configuration.ui  DXpedCertificate.hpp  DecodeListModel.cpp  DecodeListModel.h  DecodiumAlertManager.cpp  DecodiumAlertManager.h  DecodiumAudioSink.h  DecodiumBridge.cpp  DecodiumBridge.h  DecodiumCatManager.cpp  DecodiumCatManager.h  DecodiumCertificate.cpp  DecodiumCertificate.hpp  DecodiumDiagnostics.cpp  DecodiumDiagnostics.h  DecodiumDxCluster.cpp  DecodiumDxCluster.h  DecodiumLegacyBackend.cpp  DecodiumLegacyBackend.h  DecodiumLegacyLinkCompat.cpp  DecodiumLogging.cpp  DecodiumLogging.hpp  DecodiumOmniRigManager.cpp  DecodiumOmniRigManager.h  DecodiumPropagationManager.cpp  DecodiumPropagationManager.h  DecodiumQmlLegacyCompat.cpp  DecodiumSubManagers.cpp  (+102 more)
.signpath/: artifact-configuration.xml
Audio/: AudioDevice.cpp  AudioDevice.hpp  BWFFile.cpp  soundin.cpp  soundin.h  soundout.cpp  soundout.h
CMake/: getsvn.cmake  make_icns.py
Darwin/: ReadMe.txt  ReadMe_FT2.txt  ReadMe_FT2_JTDX.txt  com.ft2.jtdx.sysctl.plist  ft2-pkg-postinstall.sh
Decoder/: BaudotDecoder.cpp  BaudotDecoder.hpp  decodedtext.cpp  decodedtext.h
Detector/: AstroCompat.cpp  AstroQ3ListCompat.cpp  Conv232Compat.cpp  Detector.cpp  Detector.hpp  FST4DecodeWorker.cpp  FST4DecodeWorker.hpp  FT2DecodeWorker.cpp  FT2DecodeWorker.hpp  FT4DecodeWorker.cpp  FT4DecodeWorker.hpp  FT8DecodeWorker.cpp  FT8DecodeWorker.hpp  FanoSequentialDecoder.cpp  FanoSequentialDecoder.hpp  FftCompat.cpp  FftCompat.hpp  Fil4Filter.cpp  Fil4Filter.hpp  FortranRuntimeGuard.hpp  FtxBaseline.cpp  FtxBitmetrics.cpp  FtxCandidates.cpp  FtxDecodeBookkeeping.cpp  FtxDownsample.cpp  FtxFst4Core.cpp  FtxFst4Ldpc.cpp  FtxFst4Ldpc.hpp  FtxFt2Stage7.cpp  FtxFt4Decoder.cpp  FtxFt4Rollout.cpp  FtxFt8Chkgrid.cpp  FtxFt8Search.cpp  FtxFt8Stage4.cpp  FtxLdpc.cpp  FtxMap65Q65.cpp  FtxQ65Core.cpp  FtxQ65Core.hpp  FtxQ65Decoder.cpp  FtxQ65Decoder.hpp  (+36 more)
Modulator/: FtxFst4LdpcData.hpp  FtxMessageEncoder.cpp  FtxMessageEncoder.hpp  FtxWaveformGenerator.cpp  FtxWaveformGenerator.hpp  LegacyJtEncoder.hpp  Modulator.cpp  Modulator.hpp  RTTYModulator.cpp  RTTYModulator.hpp  WattersonChannel.cpp  WsprLegacyCompat.cpp
Network/: Cloudlog.cpp  DecoSyncKalman.cpp  DecoSyncKalman.hpp  DecoSyncSelfCal.cpp  DecoSyncSelfCal.hpp  DecoSyncTime.cpp  DecoSyncTime.hpp  DecodiumCloudlogLite.cpp  DecodiumCloudlogLite.h  DecodiumPskReporterLite.cpp  DecodiumPskReporterLite.h  DecodiumQrzLogbookLite.cpp  DecodiumQrzLogbookLite.h  DecodiumWsprUploader.cpp  DecodiumWsprUploader.h  FileDownload.cpp  FileDownload.hpp  FoxVerifier.cpp  FoxVerifier.hpp  HttpsTimeSource.cpp  HttpsTimeSource.hpp  LotWUsers.cpp  MessageClient.cpp  MessageClient.hpp  NetworkAccessManager.cpp  NetworkAccessManager.hpp  NetworkMessage.cpp  NetworkMessage.hpp  NetworkServerLookup.cpp  NetworkServerLookup.hpp  NtpClient.cpp  NtpClient.hpp  PSKReporter.cpp  PSKReporter.hpp  RemoteCommandServer.cpp  RemoteCommandServer.hpp  wsprnet.cpp
Palettes/: Raptor.pal
SampleDownloader/: Directory.cpp  RemoteFile.cpp
Transceiver/: DXLabSuiteCommanderTransceiver.cpp  DXLabSuiteCommanderTransceiver.hpp  EmulateSplitTransceiver.cpp  HRDTransceiver.cpp  HRDTransceiver.hpp  HamlibTransceiver.cpp  HamlibTransceiver.hpp  OmniRigTransceiver.cpp  PollingTransceiver.cpp  PollingTransceiver.hpp  TCITransceiver.cpp  TCITransceiver.hpp  Transceiver.hpp  TransceiverBase.cpp  TransceiverBase.hpp  TransceiverFactory.cpp  TransceiverFactory.hpp
UDPExamples/: ClientWidget.cpp  MessageAggregatorMainWindow.cpp
WSPR/: WSPRBandHopping.cpp
Web/: DecodiumWebServer.cpp  DecodiumWebServer.hpp
bundle_fixup/: CMakeLists.txt
controllers/: ActiveStationsModel.cpp  ActiveStationsModel.hpp
dist-windows-x64/: decodium_ca.qm  decodium_da.qm  decodium_de.qm  decodium_en.qm  decodium_en_GB.qm  decodium_es.qm  decodium_fr.qm  decodium_it.qm  decodium_ja.qm  decodium_ru.qm  decodium_zh.qm  decodium_zh_TW.qm
doc/: DT_NTP_ROBUST_SYNC_v1.2.0.md  FT2_INPROCESS_DECODER_PLAN.md  FT2_STABILITY_v110.md  FTX_CPP_MIGRATION_STATUS.md  FTX_FORTRAN_RESIDUE_INVENTORY.md  GITHUB_RELEASE_BODY_1.0.105.md  GITHUB_RELEASE_BODY_1.0.107.md  GITHUB_RELEASE_BODY_1.0.193.md  GITHUB_RELEASE_BODY_1.0.197.md  GITHUB_RELEASE_BODY_1.0.198.md  GITHUB_RELEASE_BODY_1.0.200.md  GITHUB_RELEASE_BODY_1.0.202.md  GITHUB_RELEASE_BODY_1.0.216.md  GITHUB_RELEASE_BODY_1.0.47.md  GITHUB_RELEASE_BODY_1.0.61.md  GITHUB_RELEASE_BODY_1.0.63.md  GITHUB_RELEASE_BODY_1.0.64.md  GITHUB_RELEASE_BODY_1.0.65.md  GITHUB_RELEASE_BODY_1.0.66.md  GITHUB_RELEASE_BODY_1.0.68.md  GITHUB_RELEASE_BODY_1.0.69.md  GITHUB_RELEASE_BODY_1.0.71.md  GITHUB_RELEASE_BODY_1.0.74.md  GITHUB_RELEASE_BODY_1.5.0.md  GITHUB_RELEASE_BODY_1.5.1.md  GITHUB_RELEASE_BODY_1.5.2.md  GITHUB_RELEASE_BODY_1.5.3.md  GITHUB_RELEASE_BODY_1.5.4.md  GITHUB_RELEASE_BODY_1.5.5.md  GITHUB_RELEASE_BODY_1.5.6.md  GITHUB_RELEASE_BODY_1.5.7.md  GITHUB_RELEASE_BODY_1.5.8.md  GITHUB_RELEASE_BODY_1.5.9.md  GITHUB_RELEASE_BODY_1.6.0.md  GITHUB_RELEASE_BODY_v1.2.0.md  GITHUB_RELEASE_BODY_v1.2.1.md  GITHUB_RELEASE_BODY_v1.3.0.md  GITHUB_RELEASE_BODY_v1.3.1.md  GITHUB_RELEASE_BODY_v1.3.2.md  GITHUB_RELEASE_BODY_v1.3.3.md  (+25 more)
engines/: Ft2QsoEngine.cpp  Ft2QsoEngine.hpp  Ft2Types.hpp
installer/: decodium_setup.iss  decodium_setup_nsis.nsi
lib/: averms.c  azdist.c  blanker.f90  c0com.c  chkcall.c  chkhist.c  chkmsg.c  chkss2.c  coord.c  db.c  decode4.f90  decode_echo.f90  decoder.f90  deep4.f90  deg2grid.c  degrade_snr.c  entail.c  fast9.f90  fast_decode.f90  flat1.c  fmtmsg.c  (+55 more)
tests/: CMakeLists.txt  ft2_equalized_compare.cpp  ft2_make_test_wav.cpp  ft2_stage_compare.cpp  ft4_stage_compare.cpp  ft8_stage_compare.cpp  q65_stage_compare.cpp  test_filedownload.cpp  test_ft2_engine.cpp  test_ft2_qso_sim.cpp  test_qt_helpers.cpp  test_secure_settings.cpp  test_streaming_list_model.cpp  test_tx_pipeline.cpp
(+362 files in other folders)
